Archive2/12/a431d8388fff9b/output
main.cpp:25:44: error: no type named 'type' in 'std::enable_if<false, void>'; 'enable_if' cannot be used to disable this declaration
                   typename std::enable_if<has_check<Mixins>::value>::type...>>
                                           ^~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:49:5: note: in instantiation of template class 'Checker<A, B>' requested here
    Checker<A, B>::go();
    ^
1 error generated.
